force-app/main/default/objects/Tlo_Contact_Email_Event__e/Tlo_Contact_Email_Event__e.object-meta.xml
<CustomObject>
    <label>Tlo_Contact_Email_Event</label>
    <pluralLabel>Tlo_Contact_Email_Event</pluralLabel>
</CustomObject>