force-app/main/default/objects/Tlo_Contact_Email_Event__e/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event_Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>