force-app/main/default/objects/Tlo_Contact_Email_Event__e/fields/TloContactId__c.field-meta.xml
<CustomField>
    <fullName>TloContactId__c</fullName>
    <label>TloContactId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>